--- a/css/chat.css
+++ b/css/chat.css
@@ -16,7 +16,7 @@
   border-radius: 50px;
   padding: 30px 40px;
   width: 80%;
-  height: 70%;
+  height: 70vh;
   background: #fff;
   text-align: center;
   position: absolute;
@@ -27,8 +27,16 @@
   display: flex;
   flex-direction: column;
 }
+
+.top {
+  flex:0.4;
+  display : felx;
+}
 .bottom {
-  flex: 0.4;
+  margin-top: 20px; /* 원하는 마진 값 설정 */
+  flex :0.6;
+  overflow: auto; /* 필요한 경우 스크롤이 표시되도록 설정 */
+  
 }
 .top {
   display: flex;
@@ -41,11 +49,21 @@
 
 .face {
   background-color: aquamarine;
-  flex: 0.3;
+  flex: 0.3;  
+  flex-direction: column; 
 }
+
+#myFace {
+  border-radius: 30px;
+    width:30%;
+    height:30%;
+    margin-top: 20px;
+    margin-left: 60px;
+}
+
 .aac {
   display: flex;
-  flex: 1;
+  flex: 0.7;
   background-color: blue;
   justify-content: space-between;
   flex-direction: column;
@@ -53,12 +71,12 @@
 }
 .aacTop {
   background-color: coral;
-  flex: 1;
+  flex: 0.4;
   align-self: auto;
 }
 .aacBot {
   background-color: chartreuse;
-  flex: 1;
+  flex: .6;
   flex-wrap: wrap;
   align-self: auto;
 }
@@ -75,18 +93,6 @@
   border-radius: 5px;
 }
 
-#tarea {
-  width: 95%;
-  height: 250px;
-  font-size: 18px;
-  background-color: #8f85851c;
-  resize: none;
-  color: black;
-  border: none;
-  border-bottom: 2px solid #0000007e;
-  outline: none;
-}
-
 .spendChat {
   text-align: center;
   background-color: #f5f1ee;
@@ -96,11 +102,12 @@
 #textarea {
   margin-top: 20px;
   width: 100%;
-  height: 100%;
+  height: 85%;
   resize: none;
   overflow-y: auto;
   max-height: 100%;
   border-radius: 10px;    
+  padding: 20px 20px 20px 20px;
 }
 
 #hbtn {
