--- a/css/chat.css
+++ b/css/chat.css
@@ -28,20 +28,17 @@
   flex-direction: column;
 }
 
-.top {
-  flex:0.4;
-  display : felx;
-}
+
 .bottom {
   margin-top: 20px; /* 원하는 마진 값 설정 */
-  flex :0.6;
-  overflow: auto; /* 필요한 경우 스크롤이 표시되도록 설정 */
+  flex :0.4;  
+  min-height: 50px;
   
 }
 .top {
   display: flex;
   flex-direction: row;
-  flex: 1;
+  flex: 0.6;
   background-color: antiquewhite;
   align-content: space-around;
   justify-content: space-between;
@@ -62,27 +59,73 @@
   margin-top: 5px;
     
 }
+#bt {
+  white-space: nowrap;
+}
 
 
 .aac {
   display: flex;
   flex: 0.7;
-  background-color: blue;
+  
   justify-content: space-between;
   flex-direction: column;
-  flex-wrap: wrap;
+
 }
 .aacTop {
-  background-color: coral;
-  flex: 0.4;
+  
+  flex: 2;
+  justify-content: space-between;
+  display : flex;
   align-self: auto;
+  background-color: white;
 }
-.aacBot {
-  background-color: chartreuse;
-  flex: .6;
+
+.aacTop button {
+  flex: 1; /* 각 버튼이 같은 크기로 자동 분배되도록 설정 */
+  margin: 0 5px; /* 버튼 사이의 간격을 조절 */
+  display: flex;
+  border:none;
+  background-color: white; /* 배경색을 흰색으로 설정 */
+  border: none; /* 버튼의 테두리 제거 */
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.aacTop img {
+  flex : 1;
+  max-height: 50px; /* 최대 높이 */
+  min-height: 30px; /* 최소 높이 */
+  
+} 
+.aacBot {  
+  overflow-y: auto; /* 내용이 넘칠 경우 스크롤바 표시 */
+  background-color: white;
+  flex: 8;
   flex-wrap: wrap;
   align-self: auto;
+  display : flex;
+  overflow : auto;
+  gap: 10px;
+  max-width: 100%;
+  max-height: 200px;
+  min-height: 50px; /* 수정된 부분 */
 }
+.aacBot img {
+  flex-shrink: 1; /* 자식 요소가 너무 작아져서 줄어들지 않도록 고정 */
+  width: 100px;
+  height: 100px;
+  max-width: 100%; /* 버튼이 부모 요소의 크기를 넘어가지 않도록 */
+  max-height: 100%; /* 버튼이 부모 요소의 크기를 넘어가지 않도록 */
+  overflow: hidden;
+  background-color: white;
+  border:none;
+  padding: 0;
+  margin: 0;
+}
+
 #input1 {
   width: 50%;
   height: 50px;
@@ -111,6 +154,7 @@
   max-height: 100%;
   border-radius: 10px;    
   padding: 20px 20px 20px 20px;
+  box-sizing : border-box;
 }
 
 #hbtn {
