--- a/css/chat.css
+++ b/css/chat.css
@@ -27,7 +27,9 @@
   display: flex;
   flex-direction: column;
 }
-
+#aimage{
+  margin-top: 45px;
+}
 
 .bottom {
   margin-top: 20px; /* 원하는 마진 값 설정 */
@@ -49,8 +51,9 @@
   flex: 0.3;  
   flex-direction: column; 
   border-width : 1px;
-  border-style:solid;
-  border-radius: 15px;
+  /* border-style:solid;
+  border-radius: 15px; */
+  
 }
 
 #myFace{  
